--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,13 @@ header {
     background-position: center;
     height: 150px;
     width: 150px;
-    border-radius: 50%; }
+    border-radius: 50%;
+    -webkit-transition: all ease-in-out 300ms;
+            transition: all ease-in-out 300ms; }
+    header .profile:hover {
+      -webkit-transform: rotate(360deg);
+          -ms-transform: rotate(360deg);
+              transform: rotate(360deg); }
   header h1 {
     color: white;
     margin-top: 20px; }
