--- a/css/main.sass
+++ b/css/main.sass
@@ -33,6 +33,9 @@ header
       position: center
     +size(150px)
     border-radius: 50%
+    transition: all ease-in-out 300ms
+    &:hover
+      transform: rotate(360deg)
 
   h1
     color: white
