--- a/index.jade
+++ b/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
   head
+    title BMc
     link(rel="stylesheet",href="css/main.css")
     meta(name="viewport",content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
   
@@ -13,11 +14,11 @@ html(lang="en")
     #links.findme
       h1 Where to find me
       .links
-        a(href="https://twitter.com/@bcm08gt")
+        a(href="https://twitter.com/@bmc08gt")
           i(class="fa fa-twitter")
         a(href="https://google.com/+BrandonMcAnsh")
           i(class="fa fa-google-plus")
-        a(href="https://github.com/BMc08GT")
+        a(href="https://github.com/bmc08gt")
           i(class="fa fa-github")
         a(href="https://www.linkedin.com/pub/brandon-mcansh/5b/719/57b")
           i(class="fa fa-linkedin")
