metadata, locally hosted font awesome, begun on work/portfolio page

--- a/work/index.jade
+++ b/work/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
   head
-    title BMc
+    title BMc | Work
     link(rel="icon",sizes="any",mask="",href="img/somesvg.svg")
     meta(name="theme-color",content="#4078c0")
     link(rel="shortcut icon", href="img/favicon.png")
@@ -15,23 +15,6 @@ html(lang="en")
     meta(name="twitter:description",content="SOMETHING CAN GO HERE")
     meta(name="twitter:image",content="img/avatar.jpg")
     <!-- website made by @mcansh on github -->
-  
-  body
-    header
-      .profile
-      h1 Brandon McAnsh
-      h2 Lorem ipsum dolor sit amet.
     
-    #links.findme
-      h1 Where to find me
-      .links
-        a(href="https://twitter.com/@bmc08gt")
-          i(class="fa fa-twitter")
-        a(href="https://google.com/+BrandonMcAnsh")
-          i(class="fa fa-google-plus")
-        a(href="https://github.com/bmc08gt")
-          i(class="fa fa-github")
-        a(href="https://www.linkedin.com/pub/brandon-mcansh/5b/719/57b")
-          i(class="fa fa-linkedin")
-    footer
-      p Copyright &copy; 2015 All Rights Reserved.
+  body
+    
