--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-@import "//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css";
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+@import url(font-awesome.min.css);
 @font-face {
   font-family: "Roboto";
   src: url("../font/roboto/Roboto-Thin.woff2") format("woff2"), url("../font/roboto/Roboto-Thin.woff") format("woff"), url("../font/roboto/Roboto-Thin.ttf") format("truetype");
@@ -77,7 +78,7 @@ header {
 
 .findme {
   margin: 20px 0;
-  height: calc(50vh - 100px);
+  height: calc(50vh - 156px);
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -111,8 +112,8 @@ header {
       margin: 20px;
       font-size: 36px;
       color: #B2DFDB;
-      -webkit-transition: 300ms all ease-in-out;
-              transition: 300ms all ease-in-out; }
+      -webkit-transition: 200ms all ease-in-out;
+              transition: 200ms all ease-in-out; }
     .findme .links .fa-twitter:hover {
       color: #55acee; }
     .findme .links .fa-google-plus:hover {
