--- a/css/main.sass
+++ b/css/main.sass
@@ -1,10 +1,8 @@
-// * Materialize v0.96.1 (http://materializecss.com)
-// * Copyright 2014-2015 Materialize
-// * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
 @import "fonts"
 @import "colors"
 @import "bourbon"
-@import "//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons)
+@import "font-awesome.min.css"
 
 *
   margin: 0
@@ -45,7 +43,7 @@ header
 
 .findme
   margin: 20px 0
-  height: calc(50vh - 100px)
+  height: calc(50vh - 156px)
   display: flex
   flex-direction: column
   align-items: center
@@ -61,7 +59,7 @@ header
       font:
         size: 36px
       color: $teal-lighter
-      transition: 300ms all ease-in-out
+      transition: 200ms all ease-in-out
     .fa-twitter:hover
       color: #55acee
     .fa-google-plus:hover
