returned footer to the original location (was looking into something but scraped it

--- a/index.jade
+++ b/index.jade
@@ -20,7 +20,7 @@ html(lang="en")
     header
       .profile
       h1 Brandon McAnsh
-      h2 Lorem ipsum dolor sit amet.
+      h2 AOKP // CM // Apps // Firmware
     
     #links.findme
       h1 Where to find me
