--- a/index.jade
+++ b/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title BMc
+    meta(charset="utf-8")
     link(rel="icon",sizes="any",mask="",href="img/somesvg.svg")
     meta(name="theme-color",content="#4078c0")
     link(rel="shortcut icon", href="img/favicon.png")
