--- a/work/index.jade
+++ b/work/index.jade
@@ -4,9 +4,9 @@ html(lang="en")
     title BMc | Work
     meta(charset="utf-8")
     link(rel="icon",sizes="any",mask="",href="img/somesvg.svg")
-    meta(name="theme-color",content="#4078c0")
-    link(rel="shortcut icon", href="img/favicon.png")
-    link(rel="stylesheet",href="css/work.css")
+    meta(name="theme-color",content="#00796B")
+    link(rel="shortcut icon", href="../img/favicon.png")
+    link(rel="stylesheet",href="../css/work.css")
     meta(name="viewport",content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     meta(name="author",content="Brandon McAnsh")
     meta(name="description",content="SOMETHING CAN GO HERE")
@@ -14,7 +14,7 @@ html(lang="en")
     meta(name="twitter:url",content="http://brandonmcansh.com")
     meta(name="twitter:title",content="Brandon McAnsh")
     meta(name="twitter:description",content="SOMETHING CAN GO HERE")
-    meta(name="twitter:image",content="img/avatar.jpg")
+    meta(name="twitter:image",content="../img/avatar.jpg")
     <!-- website made by @mcansh on github -->
     
   body
