--- a/index.jade
+++ b/index.jade
@@ -19,6 +19,10 @@ html(lang="en")
   
   body
     header
+      nav
+        .links
+          a(href="") Home
+          a(href="work") Work
       .profile
       h1 Brandon McAnsh
       h2 AOKP // CM // Apps // Firmware
