--- a/css/main.sass
+++ b/css/main.sass
@@ -21,8 +21,28 @@ header
   align-items: center
   height: 50vh
   width: 100vw
-  background: $teal
+  background: $teal-700
   box-shadow: -1px 10px 5px 0px rgba(204,204,204,1)
+
+  nav
+    padding: 23px 0
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    background: $teal-900
+    width: 100vw
+    top: 0
+    position: absolute
+    .links
+      a
+        color: white
+        text-decoration: none
+        padding: 5px 10px
+        font-size: 24px
+        &:hover
+          box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 0px 0px, rgba(0, 0, 0, 0.0980392) 0px 0px 0px 1px
+          border-radius: 2px
 
   .profile
     background:
@@ -58,8 +78,10 @@ header
       margin: 20px
       font:
         size: 36px
-      color: $teal-lighter
+      color: $teal-200
       transition: 200ms all ease-in-out
+      &:hover
+        transform: scale(1.25)
     .fa-twitter:hover
       color: #55acee
     .fa-google-plus:hover
