--- a/css/fonts.sass
+++ b/css/fonts.sass
@@ -33,3 +33,6 @@
   src: url("../font/material-design-icons/Material-Design-Icons.eot?#iefix") format("embedded-opentype"), url("../font/material-design-icons/Material-Design-Icons.woff2") format("woff2"), url("../font/material-design-icons/Material-Design-Icons.woff") format("woff"), url("../font/material-design-icons/Material-Design-Icons.ttf") format("truetype"), url("../font/material-design-icons/Material-Design-Icons.svg#Material-Design-Icons") format("svg")
   font-weight: normal
   font-style: normal
+
+@import "font-awesome"
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons)
