fun sass compile error fix

--- a/css/main.sass
+++ b/css/main.sass
@@ -27,7 +27,7 @@ header
   align-items: center
   height: 50vh
   width: 100vw
-  background: $teal
+  background: $teal-700
   box-shadow: -1px 10px 5px 0px rgba(204,204,204,1)
 
   .profile
@@ -64,7 +64,7 @@ header
       margin: 20px
       font:
         size: 36px
-      color: $teal-lighter
+      color: $teal-500
       transition: 200ms all ease-in-out
     .fa-twitter:hover
       color: #55acee
@@ -102,4 +102,3 @@ footer
     height: 100vh
   .findme
     margin: 80px 0 40px 0
->>>>>>> parent of b5b3f99... added all the colors from google design colors, just in case; added scaling to social links
