you saw my head 😱

--- a/css/work.sass
+++ b/css/work.sass
@@ -4,7 +4,7 @@
 @import "colors"
 
 header
-  background: $red-dark
+  background: $red-700
   padding: 20px 0
   position: fixed
   width: 100vw
@@ -44,7 +44,6 @@ header
   justify-content: center
   .aokp
     height: 100vh
-    // padding-top: 80px
     display: flex
     align-items: center
     flex-direction: column
@@ -53,28 +52,20 @@ header
       background:
         image: url(../img/aokp.png)
         size: cover
-<<<<<<< HEAD
         position: center
       height: 220px
       width: 750px
-
-=======
       +size(150px)
->>>>>>> parent of b5b3f99... added all the colors from google design colors, just in case; added scaling to social links
   .cyanogen
     @extend .aokp
     .cm-image
       background:
         image: url(../img/cyanogen.png)
         size: cover
-<<<<<<< HEAD
         position: center
       height: 200px
       width: 770px
-
-=======
       +size(150px)
->>>>>>> parent of b5b3f99... added all the colors from google design colors, just in case; added scaling to social links
   .apps
     @extend .aokp
     .apps-image
@@ -83,7 +74,6 @@ header
         size: cover
         position: center
       +size(150px)
-<<<<<<< HEAD
     h1
       padding-bottom: 20px
     h2
@@ -92,9 +82,6 @@ header
       max-width: 600px
       padding-top: 20px
       line-height: 1.5em
-
-=======
->>>>>>> parent of b5b3f99... added all the colors from google design colors, just in case; added scaling to social links
   .firmware
     @extend .aokp
     .fw-image
