update copyright to 2016
Signed-off-by: Logan McAnsh <l.m@loganmcansh.com>

--- a/work/index.jade
+++ b/work/index.jade
@@ -9,11 +9,11 @@ html(lang="en")
     link(rel="stylesheet",href="../css/work.css")
     meta(name="viewport",content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     meta(name="author",content="Brandon McAnsh")
-    meta(name="description",content="SOMETHING CAN GO HERE")
+    meta(name="description",content="Brandon McAnsh")
     meta(name="twitter:card",content="summary")
     meta(name="twitter:url",content="http://brandonmcansh.com")
     meta(name="twitter:title",content="Brandon McAnsh")
-    meta(name="twitter:description",content="SOMETHING CAN GO HERE")
+    meta(name="twitter:description",content="Brandon McAnsh")
     meta(name="twitter:image",content="../img/avatar.jpg")
     <!-- website made by @mcansh on github -->
     
