found some issues (lol)
Signed-off-by: Logan McAnsh <l.m@loganmcansh.com>

--- a/css/header.sass
+++ b/css/header.sass
@@ -9,6 +9,11 @@ header
   width: 100vw
   background: $teal-700
   box-shadow: -1px 10px 5px 0px rgba(204,204,204,1)
+  text-align: center
+  @media (max-width: 800px) and (orientation:landscape)
+    height: 100vh
+  @media (max-width: 330px)
+    height: 100vh
 
   .profile
     background:
