--- a/css/findme.sass
+++ b/css/findme.sass
@@ -5,11 +5,21 @@
   flex-direction: column
   align-items: center
   justify-content: center
+  @media (max-width: 800px) and (orientation:landscape)
+    margin: 20px 0 20px 0
+  @media (max-width: 400px)
+    margin: 50px 0 20px 0
+  @media (max-width: 330px)
+    margin: 80px 0 40px 0
   h1
     font-weight: 400
   .links
     display: flex
     flex-direction: row
+    @media (max-width: 800px) and (orientation:landscape)
+      margin: 20px
+    @media (max-width: 400px)
+      margin: 20px
 
     .fa
       margin: 20px
