move javascript files to root
Signed-off-by: Logan McAnsh <l.m@loganmcansh.com>

--- a/css/header.sass
+++ b/css/header.sass
@@ -23,7 +23,7 @@ header
     +size(150px)
     border-radius: 50%
     transition: all ease-in-out 300ms
-    &:hover
+    &.hover
       transform: rotate(360deg)
 
   h1
