--- a/index.jade
+++ b/index.jade
@@ -36,3 +36,6 @@ html(lang="en")
           i(class="fa fa-linkedin")
     footer
       p Copyright &copy; 2016 All Rights Reserved.
+      
+    script(src="js/jquery-2.2.4.min.js")
+    script(src="js/main.js")
